--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "express-partials": "^0.3.0",
     "morgan": "~1.5.1",
     "pg": "^4.3.0",
-    "sequelize": "^2.1.3",
+    "pg-hstore": "^2.3.2",
+    "sequelize": "^2.1.0",
     "serve-favicon": "~2.2.0",
     "sqlite3": "^3.0.8"
   }
