--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "pg-hstore": "^2.3.2",
     "sequelize": "^2.1.0",
     "serve-favicon": "~2.2.0",
-    "sqlite3": "^3.0.8"
+    "sqlite3": "^3.0.8",
+    "multer": "~0.1.8"
   }
 }
