--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "sequelize": "^2.1.0",
     "serve-favicon": "~2.2.0",
     "sqlite3": "^3.0.8",
-    "multer": "~0.1.8"
+    "multer": "~0.1.8",
+    "favorite-star": "~0.1.5"
   }
 }
